<resources>
    <string name="app_name">Entendiste</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repite la contraseña</string>
    <string name="login">Entrar</string>
    <string name="verpasswords">Ver contraseñas</string>
    <string name="email">Email</string>
    <string name="or">o</string>
    <string name="register">Regístrate</string>

    <string name="item1">Asignaturas</string>
    <string name="item2">Configuracion</string>
    <string name="item3">Salir</string>

    <!-- Títulos de activities -->

    <string name="title_activity_login">Login</string>
    <string name="title_activity_asignaturas">Asignaturas</string>
    <string name="title_activity_buscar">Buscar Asignatura</string>
    <string name="title_activity_temas">Temas</string>
    <string name="title_activity_answer">Responder</string>

    <!-- Botones de opciones -->

    <string name="boton1">Opción 1</string>
    <string name="boton2">Opción 2</string>
    <string name="boton3">Opción 3</string>
    <string name="boton4">Opción 4</string>
    <string name="mensaje">mensaje</string>

    <string name="entendido">Entendido</string>
    <string name="noEntendido">No entendido</string>
    <string name="confirmar">Confirmar</string>

    <string name="nuevaAsignatura">Añadir asignatura</string>
    <string name="buscar">Buscar</string>
    <string name="asignatura">Asignatura</string>

    <string name="desc_main_img">Logo entendiste principal</string>
    <string name="sin_datos">Lista vacía</string>

    <!-- Pantalla responder -->

    <string name="alus_respondieron">Número de alumnos que respondieron:</string>
    <string name="alus_entendieron">Número de alumnos que entendieron el tema:</string>
    <string name="alus_no_entendieron">Número de alumnos que no entendieron el tema:</string>


</resources>