<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange_radial"
    tools:context=".AnswerActivity">

    <RadioGroup
        android:id="@+id/rdgRespuesta"
        android:layout_width="316dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/yesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entendido" />

        <RadioButton
            android:id="@+id/noBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noEntendido" />

    </RadioGroup>

    <Button
        android:id="@+id/btnConfirmar"
        android:layout_width="133dp"
        android:layout_height="54dp"
        android:onClick="enviarRespuesta"
        android:text="@string/confirmar"
        app:backgroundTint="@color/raw_sienna"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgRespuesta"
        app:layout_constraintVertical_bias="0.492" />

</androidx.constraintlayout.widget.ConstraintLayout>